version 0.99.2 (not yet released)
           * make sure scatter method sets pyplot color mappable.
           * added cubed_sphere example.
           * updated NetCDFFile to use pupynere 1.0.2 (now can write as well
             as read!).
           * now works with geos version 3.
           * added "proj4string" Basemap instance variable.
           * testgdal example now uses gdal to read topo data from a raster
             DEM file and ogr to read state boundaries from a shape file.
           * warpimage method can now handle gray-scale images, and 
             images specifed as URLs (for example, the Blue Marble images from
             http://earthobservatory.nasa.gov/Newsroom/BlueMarble/BlueMarble_monthlies.html).
version 0.99.1 (svn revision 5961)
           * geos-2.2.3 patched for compatibility with gcc 4.3.
           * added "barbs" method to draw wind barbs on the map.
           * added "tissot" method for generating Tissot's indicatrix
             (see example plot_tissot.py).
           * fixed processing of coastlines for gnomonic projection.
           * don't try to use PyNIO in NetCDFFile (it was causing
             too many suprises).
           * start of improved documentation using Sphinx/docutils.
             Can be viewed at
             http://matplotlib.sf.net/basemap/doc/html
           * change default behaviour of num2date and date2num to be
             the same as matplotlib counterparts.
version 0.99 (svn revision 5344)
           * fix to warpimage method for API change in matplotlib 0.98.0.
           * updated pyproj to 1.8.6.
           * fixed bug in NetCDFFile creating masked arrays when both
             _FillValue and missing_value exist.
           * drawparallels and drawmeridians return a dictionary containing
             the Line2D and Text instances associated with each lat or lon.
           * drawcoastlines, drawcountries and friends now have
             PatchCollection return values.